# Coolant-Control-Simulation

./: CMakeLists.txt  README.md  cooling_system_test.cpp  main.cpp  main_controller.cpp  plant_simulation.cpp  shared_data.cpp  shared_data.h
